generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// Legacy database enums (public schema)
enum ParsingStatus {
  success
  failed
  partial

  @@map("parsing_status")
}

enum PassengerType {
  Adult
  Child
  Infant

  @@map("passenger_type")
}

enum PassengerCategory {
  Normal
  Transit

  @@map("passenger_category")
}

enum ScanPointStatus {
  Active
  Inactive

  @@map("scan_point_status")
}

enum UserRole {
  Admin
  Scan
  View
  IT

  @@map("user_role")
}

enum UserStatus {
  Active
  Inactive

  @@map("user_status")
}

enum LoginStatus {
  success
  failed
  timeout
  forced_logout

  @@map("login_status")
}

enum LoginMethod {
  password
  session
  token
  sso

  @@map("login_method")
}

enum PhotoSourceType {
  scan_transit @map("scan-transit")
  data_entry   @map("data-entry")

  @@map("photo_source_type")
}

model User {
  id        Int        @id @default(autoincrement())
  username  String     @unique @db.VarChar(50)
  password  String     @db.VarChar(255)
  role      UserRole
  status    UserStatus @default(Active)
  createdAt DateTime?  @default(now()) @map("created_at") @db.Timestamptz(6)

  logins LogLogin[]
  scans  BcbpParser[] @relation("BcbpParserScanner")

  @@map("users")
}

model ScanPoint {
  id        Int            @id @default(autoincrement())
  name      String         @unique @db.VarChar(100)
  status    ScanPointStatus @default(Active)
  createdAt DateTime?      @default(now()) @map("created_at") @db.Timestamptz(6)

  passengers Passenger[]
  parsers    BcbpParser[]
  logins     LogLogin[]

  @@map("scan_points")
}

model Passenger {
  id             Int               @id @default(autoincrement())
  pnr            String            @db.VarChar(10)
  name           String            @db.VarChar(200)
  flightNumber   String            @map("flight_number") @db.VarChar(15)
  origin         String            @db.VarChar(10)
  destination    String            @db.VarChar(10)
  seatNumber     String            @map("seat_number") @db.VarChar(10)
  sequenceNumber String?           @map("sequence_number") @db.VarChar(10)
  flightDate     DateTime?         @map("flight_date") @db.Date
  type           PassengerType
  category       PassengerCategory
  scannedAt      DateTime          @map("scanned_at") @db.Timestamp(6)
  scanPoint      String            @map("scan_point") @db.VarChar(100)
  sent           String?           @default("0") @db.VarChar(1)
  sendDate       DateTime?         @map("send_date") @db.Timestamp(6)
  deletedAt      DateTime?         @map("deleted_at") @db.Timestamp(6)

  scanPointRef   ScanPoint         @relation(fields: [scanPoint], references: [name], onDelete: Restrict, onUpdate: Cascade)

  parsers      BcbpParser[]
  photoUploads PhotoUpload[]

  @@unique([type, seatNumber, flightDate, flightNumber], name: "uniquePassenger", map: "unique_passenger")
  @@index([flightDate], map: "idx_passengers_flight_date")
  @@index([scanPoint], map: "idx_passengers_scan_point")
  @@index([scannedAt(sort: Desc)], map: "idx_passengers_scanned_at")
  @@index([deletedAt], map: "idx_passengers_deleted_at")
  @@map("passengers")
}

model BcbpParser {
  id            Int           @id @default(autoincrement())
  rawBarcode    String        @map("raw_barcode") @db.VarChar(255)
  parsedData    Json          @map("parsed_data") @db.JsonB
  parsingStatus ParsingStatus @default(success) @map("parsing_status")
  errorMessage  String?       @map("error_message")
  scanTimestamp DateTime      @map("scan_timestamp") @db.Timestamp(6)
  scanPoint     String        @map("scan_point") @db.VarChar(100)

  scannerUserId Int      @map("scanner_user_id")
  createdAt     DateTime? @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime? @default(now()) @map("updated_at") @db.Timestamptz(6)

  passengerId Int @map("passenger_id")

  scanPointRef ScanPoint @relation(fields: [scanPoint], references: [name], onDelete: Restrict, onUpdate: Cascade)

  passenger   Passenger @relation(fields: [passengerId], references: [id], onDelete: Restrict)
  scannerUser User      @relation("BcbpParserScanner", fields: [scannerUserId], references: [id], onDelete: Restrict)

  @@index([scanPoint], map: "idx_bcbp_parser_scan_point")
  @@index([scannerUserId], map: "idx_bcbp_parser_scanner_user")
  @@index([rawBarcode], map: "idx_bcbp_parser_raw")
  @@map("bcbp_parser")
}

model LogLogin {
  id                     Int         @id @default(autoincrement())
  userId                 Int         @map("user_id")
  loginTimestamp         DateTime    @map("login_timestamp") @db.Timestamp(6)
  logoutTimestamp        DateTime?   @map("logout_timestamp") @db.Timestamp(6)
  sessionDurationSeconds Int?        @map("session_duration_seconds")
  loginStatus            LoginStatus @default(success) @map("login_status")
  ipAddress              String?     @map("ip_address") @db.VarChar(45)
  userAgent              String?     @map("user_agent")
  loginMethod            LoginMethod @default(password) @map("login_method")
  failureReason          String?     @map("failure_reason") @db.VarChar(255)
  scanPoint              String?     @map("scan_point") @db.VarChar(100)
  airportBranch          String?     @map("airport_branch") @db.VarChar(10)
  deviceInfo             Json?       @map("device_info") @db.JsonB
  securityEvents         Json?       @map("security_events") @db.JsonB
  createdAt              DateTime?   @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt              DateTime?   @default(now()) @map("updated_at") @db.Timestamptz(6)

  scanPointRef           ScanPoint?  @relation(fields: [scanPoint], references: [name], onDelete: SetNull, onUpdate: Cascade)

  user User @relation(fields: [userId], references: [id], onDelete: Restrict)

  @@index([userId], map: "idx_log_login_user_id")
  @@index([loginTimestamp], map: "idx_log_login_timestamp")
  @@index([loginStatus], map: "idx_log_login_status")
  @@index([ipAddress], map: "idx_log_login_ip_address")
  @@index([scanPoint], map: "idx_log_login_scan_point")
  @@index([airportBranch], map: "idx_log_login_airport_branch")
  @@index([createdAt], map: "idx_log_login_created_at")
  @@index([userId, loginTimestamp], map: "idx_log_login_user_date")
  @@index([loginStatus, loginTimestamp], map: "idx_log_login_status_date")
  @@index([scanPoint, loginTimestamp], map: "idx_log_login_scan_point_date")
  @@map("log_login")
}

model PhotoUpload {
  id              Int             @id @default(autoincrement())
  passengerId     Int?            @map("passenger_id")
  filename        String          @db.VarChar(255)
  fileSize        Int             @map("file_size")
  uploadTimestamp DateTime        @map("upload_timestamp") @db.Timestamp(6)
  sessionData     Json?           @map("session_data") @db.JsonB
  sourceType      PhotoSourceType @default(data_entry) @map("source_type")
  manualEntrySaved Boolean?       @default(false) @map("manual_entry_saved")
  createdAt       DateTime?       @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime?       @default(now()) @map("updated_at") @db.Timestamptz(6)
  deletedAt       DateTime?       @map("deleted_at") @db.Timestamp(6)
  aiGenerated     Boolean?        @default(false) @map("ai_generated")
  aiGeneratedData Json?           @map("ai_generated_data") @db.JsonB
  aiGeneratedAt   DateTime?       @map("ai_generated_at") @db.Timestamp(6)

  passenger Passenger? @relation(fields: [passengerId], references: [id], onDelete: SetNull)

  @@index([uploadTimestamp], map: "idx_photo_uploads_timestamp")
  @@index([filename], map: "idx_photo_uploads_filename")
  @@index([passengerId], map: "idx_photo_uploads_passenger_id")
  @@index([deletedAt], map: "idx_photo_uploads_deleted_at")
  @@index([aiGenerated], map: "idx_photo_uploads_ai_generated")
  @@map("photo_uploads")
}

